--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ Don't forget to star the repo
     </a></div>
     <style>
                                 
-        #saavn-results{
+        saavn-results{
         display: flex;
         flex-wrap: wrap;
         }
